k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strava-merger
  namespace: default
  labels:
    app: strava-merger
spec:
  selector:
    app: strava-merger
  ports:
    - name: http
      port: 80
      targetPort: 8000
